--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -6,9 +6,14 @@
 _blog:
     resource: "@BlogBundle/Controller/BlogController.php"
     type:     annotation
-    prefix:   /blog
+    prefix:   /
 
 _admin:
     resource: "@BlogBundle/Controller/AdminController.php"
     type:     annotation
-    prefix:   /admin
+    prefix:   /admin/dashboard
+
+_post:
+    resource: "@BlogBundle/Controller/PostController.php"
+    type:     annotation
+    prefix:   /admin/post    
