changed db to symphony user

--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -3,8 +3,8 @@
     database_host="localhost"
     database_port=""
     database_name="symfony"
-    database_user="root"
-    database_password="root"
+    database_user="symfony"
+    database_password="symfony"
     mailer_transport="smtp"
     mailer_host="localhost"
     mailer_user=""
