--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -3,16 +3,6 @@
 #   resource: "@FrameworkBundle/Resources/config/routing/internal.xml"
 #   prefix:   /_internal
 
-login:
-    pattern:   /login
-    defaults:  { _controller: BlogBundle:Security:login }
-
-login_check:
-    pattern:   /login_check
-
-logout:
-    pattern:   /logout
-
 _blog:
     resource: "@BlogBundle/Controller/BlogController.php"
     type:     annotation
@@ -21,7 +11,7 @@ _blog:
 _admin:
     resource: "@BlogBundle/Controller/AdminController.php"
     type:     annotation
-    prefix:   /admin/dashboard
+    prefix:   /admin
 
 _posts:
     resource: "@BlogBundle/Controller/PostsController.php"
@@ -33,4 +23,27 @@ _comments:
     type:     annotation
     prefix:   /admin/comments    
 
-    
+_users:
+    resource: "@BlogBundle/Controller/UsersController.php"
+    type:     annotation
+    prefix:   /admin/users    
+
+
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
+fos_user_profile:
+    resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
+    prefix: /profile
+
+fos_user_register:
+    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+    prefix: /register
+
+fos_user_resetting:
+    resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
+    prefix: /resetting
+
+fos_user_change_password:
+    resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
+    prefix: /profile
