--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -34,11 +34,11 @@ security:
             #http_basic:
             #    realm: "Secured Demo Area"
 
-    access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+    # access_control:
+    #     - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+    #     - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+    #     - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+    #     - { path: ^/admin/, role: ROLE_ADMIN }
 
         # - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         # - { path: ^/admin, roles: ROLE_ADMIN } }
