--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -8,26 +8,35 @@ _blog:
     type:     annotation
     prefix:   /
 
-_admin:
-    resource: "@BlogBundle/Controller/AdminController.php"
-    type:     annotation
-    prefix:   /admin
+# _admin:
+#     resource: "@BlogBundle/Controller/AdminController.php"
+#     type:     annotation
+#     prefix:   /admin
 
-_posts:
-    resource: "@BlogBundle/Controller/PostsController.php"
-    type:     annotation
-    prefix:   /admin/posts    
+# _posts:
+#     resource: "@BlogBundle/Controller/PostsController.php"
+#     type:     annotation
+#     prefix:   /admin/posts    
 
-_comments:
-    resource: "@BlogBundle/Controller/CommentsController.php"
-    type:     annotation
-    prefix:   /admin/comments    
+# _comments:
+#     resource: "@BlogBundle/Controller/CommentsController.php"
+#     type:     annotation
+#     prefix:   /admin/comments    
 
-_users:
-    resource: "@BlogBundle/Controller/UsersController.php"
-    type:     annotation
-    prefix:   /admin/users    
+# _users:
+#     resource: "@BlogBundle/Controller/UsersController.php"
+#     type:     annotation
+#     prefix:   /admin/users    
 
+
+admin:
+    resource: '@SonataAdminBundle/Resources/config/routing/sonata_admin.xml'
+    prefix: /admin
+
+_sonata_admin:
+    resource: .
+    type: sonata_admin
+    prefix: /admin
 
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
