--- a/app/config/parameters.ini
+++ b/app/config/parameters.ini
@@ -1,13 +1,16 @@
 [parameters]
-    database_driver="pdo_mysql"
-    database_host="localhost"
-    database_port=""
-    database_name="symfony"
-    database_user="symfony"
-    database_password="symfony"
-    mailer_transport="smtp"
-    mailer_host="localhost"
-    mailer_user=""
-    mailer_password=""
-    locale="en"
-    secret="acacad9829619feddb74a688d527f101c2f47470"
+    database_driver     =   pdo_mysql
+    database_host       =   localhost
+    database_port       =    
+    database_name       =   symfony
+    database_user       =   symfony
+    database_password   =   symfony
+
+    mailer_transport    =   smtp
+    mailer_host         =   localhost
+    mailer_user         =
+    mailer_password     =
+
+    locale              =   en_US
+
+    secret              =   acacad9829619feddb74a688d527f101c2f47470
