--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -38,6 +38,14 @@ _sonata_admin:
     type: sonata_admin
     prefix: /admin
 
+sonata_user:
+    resource: '@SonataUserBundle/Resources/config/routing/admin_security.xml'
+    prefix: /admin    
+
+sonata_user_impersonating:
+    pattern: /
+    defaults: { _controller: SonataPageBundle:Page:catchAll }
+
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
